--- a/Webapp/package.json
+++ b/Webapp/package.json
@@ -17,17 +17,22 @@
     "test-watch": "jest --watch"
   },
   "dependencies": {
+    "@aws-sdk/client-apigatewaymanagementapi": "^3.726.1",
+    "@aws-sdk/protocol-http": "^3.374.0",
+    "@aws-sdk/s3-request-presigner": "^3.726.1",
+    "@aws-sdk/signature-v4": "^3.374.0",
     "@shadcn/ui": "^0.0.4",
     "axios": "^1.7.7",
     "bootstrap-icons": "^1.11.3",
-    "class-variance-authority": "^0.7.0",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "lucide-react": "^0.471.0",
     "next": "^13.5.7",
     "next-i18next": "^15.3.1",
     "next-themes": "^0.3.0",
     "papaparse": "^5.4.1",
     "react": "^18.2.0",
-    "tailwind-merge": "^2.5.4",
+    "tailwind-merge": "^2.6.0",
     "tailwind-variants": "^0.2.0",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^10.0.0",
@@ -72,7 +77,7 @@
     "prettier": "^3.0.3",
     "prettier-plugin-tailwindcss": "^0.5.11",
     "rimraf": "^5.0.5",
-    "tailwindcss": "^3.3.3",
+    "tailwindcss": "^3.4.17",
     "typescript": "^5.2.2"
   },
   "license": "MIT"
